--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -129,8 +129,7 @@ input[type="checkbox"]:checked {
   background-color: #f00;
 }
 
-
-input[type="text"]{
+input[type="text"] {
   margin: 0px 1rem;
 }
 input[type="radio"]:hover,
@@ -166,3 +165,43 @@ input[type="checkbox"]:hover {
   flex-direction: column;
   justify-content: space-between;
 }
+
+
+
+/*THIS IS ADDITIONAL
+
+body {
+  background-color: #1e1e1e;
+  color: #32cd32;
+  font-family: monospace;
+}
+h1 {
+  color: #32cd32;
+}
+#terminal {
+  width: 100%;
+  height: 400px;
+  background-color: black;
+  border: 2px solid #32cd32;
+  padding: 10px;
+  overflow-y: scroll;
+}
+.stop-button {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+*/
+.terminal-output{
+  background-color: #333;
+  color: #00ff00;
+  padding: 20px;
+  height: 50vh;
+  width: 80vw;
+  overflow-y: scroll;
+  white-space: pre-wrap;
+}
+
